// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar default 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            inline={true}
            onChange={[Function]}
            selected={null}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar invalid date 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value="Invalid date"
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            inline={true}
            onChange={[Function]}
            selected={null}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar with max date 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            inline={true}
            maxDate={"2019-07-04T00:00:00.000Z"}
            onChange={[Function]}
            selected={null}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar with min date 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            inline={true}
            minDate={"2019-07-04T00:00:00.000Z"}
            onChange={[Function]}
            selected={null}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar with start and end date 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value=""
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            endDate={"2019-07-04T00:00:00.000Z"}
            inline={true}
            onChange={[Function]}
            selected={null}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            startDate={"2019-06-27T00:00:00.000Z"}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;

exports[`Storyshots renderers/TimeFilter/components/DatetimeCalendar with value 1`] = `
<div
  className="canvasDateTimeCal"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <input
        className="euiFieldText euiFieldText--compressed"
        onChange={[Function]}
        style={
          Object {
            "textAlign": "center",
          }
        }
        type="text"
        value="2019-06-27 00:00:00"
      />
    </div>
  </div>
  <span>
    <span
      className="euiDatePicker euiDatePicker--inline"
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <ReactDatePicker
            accessibleMode={true}
            adjustDateOnChange={true}
            className="euiDatePicker euiFieldText"
            dateFormat="MM/DD/YYYY hh:mm A"
            inline={true}
            onChange={[Function]}
            selected={"2019-06-27T00:00:00.000Z"}
            shouldCloseOnSelect={false}
            showMonthDropdown={true}
            showTimeSelect={true}
            showYearDropdown={true}
            timeFormat="hh:mm A"
            yearDropdownItemNumber={7}
          />
        </div>
      </div>
    </span>
  </span>
</div>
`;
